2013-03-15  Vineet Gupta <vgupta@synopsys.com>

	* build-uclibc.sh: No need to copy Linux sources

2013-03-04  Simon Cook  <simon.cook@embecosm.com>

	* build-elf32.sh: Add support for building big endian ELF tool chain.
	* build-uclibc.sh: Set build_dir based on endianness of tools.
	* run-elf32-tests.sh: Set test directories based on endianness.
	* run-uclibc-tests.sh: Likewise.

2013-02-27  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-uclibc.sh: Add ARC_LEGACY_PTRACE_ABI defintion when
	building gdbserver.

2013-02-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Optionally do a fetch first, to deal with new
	branches.

2013-02-25  Simon Cook  <simon.cook@embecosm.com>

	* arc-versions.sh: Updated binutils, gcc, gdb and newlib branch
	references

2013-02-21  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-elf32.sh: Don't build and install GDB.

2013-02-21  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-generic.exp: Move extra file loads
	to after the main config file is loaded. Add gdb-extra.exp. Mark
	as using GDB stub.
	* dejagnu/gdb-extra.exp: Created as placeholder.

2013-02-20  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Move most gdbserver config
	to arc-linux-generic.exp
	* dejagnu/baseboards/arc-linux-nsim.exp: Likewise.
	* dejagnu/baseboards/arc-linux-generic.exp: Set most gdbserver
	config.

2013-02-20  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-nsim.exp: Correct code accidentally
	introduced.

2013-02-20  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Configure to run with
	gdbserver target if GDB is the tool.
	* dejagnu/baseboards/arc-linux-nsim.exp: Likewise.
	* dejagnu/baseboards/arc-linux-generic.exp: Decide base
	configuration to load based on tool.
	* dejagnu/ftp-extra.exp (ftp_download): Add code to set executable
	bits of transferred file if necessary.